# VoxelMultiAxisAM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  replicability_instructions.htm
cmake/: FindLIBIGL.cmake
example/: kitten.ply
include/: alphanum.hpp  bsp_tree.h  bst.h  dual_contouring.h  file_parser.h  hash_tuple.h  mesh.h  trimming.h  utils.h  voxel.h
layers/: .gitignore
qhull/CMakeModules/: FindQhull.cmake
src/: bsp_tree.cpp  bst.cpp  dual_contouring.cpp  file_parser.cpp  main.cpp  trimming.cpp  voxel.cpp
